@@ -21,7 +21,7 @@ my $VERSION = "__BLEEDING_EDGE__";
 
 $ENV{PATH} = "$FindBin::Bin/bin:$ENV{PATH}";
 
-my ($opt_c, $opt_C, $opt_r, $opt_R, $opt_A, $opt_g, $opt_t, $opt_f, $opt_T, $opt_u, $opt_d, $opt_h, $opt_x, $opt_s, $opt_e,
+my ($opt_c, $opt_C, $opt_r, $opt_R, $opt_A, $opt_g, $opt_t, $opt_f, $opt_T, $opt_u, $opt_d, $opt_h, $opt_x,
 	$ALT_SPLICE, $INVALIDATE_SINGLE_EXON_ESTS, $IMPORT_CUSTOM_ALIGNMENTS_GFF3,
 	$splice_graph_assembler_flag,
     $ALIGNED_IS_TRANSCRIBED_ORIENT,
@@ -57,8 +57,6 @@ my $CUFFLINKS_GTF;
 			  'd' => \$opt_d,
               'h' => \$opt_h,
               'x' => \$opt_x,
-              's=i' => \$opt_s,
-			  'e=i' => \$opt_e,
               'INVALIDATE_SINGLE_EXON_ESTS' => \$INVALIDATE_SINGLE_EXON_ESTS,
               'IMPORT_CUSTOM_ALIGNMENTS_GFF3=s' => \$IMPORT_CUSTOM_ALIGNMENTS_GFF3,
               'USE_SPLICE_GRAPH_ASSEMBLER' => \$splice_graph_assembler_flag,
@@ -115,7 +113,7 @@ my $usage =  <<_EOH_;
 #   * indicates required
 #
 #
-# -c * <filename>  alignment assembly configuration file
+# --config|-c * <filename>  alignment assembly configuration file
 #
 # // spliced alignment settings
 # --ALIGNERS <string>   aligners (available options include: gmap, blat... can run both using 'gmap,blat')
@@ -143,11 +141,6 @@ my $usage =  <<_EOH_;
 #    -u <filename>   value, transcript db containing untrimmed sequences (input to seqclean)
 #                  <a filename with a .cln extension should also exist, generated by seqclean.>
 #
-#
-# // Jump-starting or prematurely terminating
-# -x               flag, print cmds only, don\'t process anything. (useful to get indices for -s or -e opts below)
-# -s <int>         pipeline index to start running at (avoid rerunning searches). 
-# -e <int>         pipeline index where to stop running, and do not execute this entry. 
 #
 #
 # Misc:
@@ -223,13 +216,6 @@ my $RUN_PIPELINE = $opt_R;
 #$ALT_SPLICE = $RUN_PIPELINE;  ## always run alt-splice analysis in alignment-assembly pipeline.
 my $COMPARE_TO_ANNOT = $opt_A;
 my $CREATE_DB = $opt_C;
-my $STARTING_INDEX = (defined($opt_s)) ? $opt_s : undef;
-my $ENDING_INDEX = (defined($opt_e)) ? $opt_e : undef;
-
-if ($STARTING_INDEX && $CREATE_DB) {
-    print STDERR "WARNING, not creating database since in resume mode, as per -s parameter specified.\n";
-    $CREATE_DB = 0;
-}
 
 my $PRINT_CMDS_ONLY = $opt_x;
 my $configfile = $opt_c or die $usage;
